# j2tmpl

./: .gitignore  .pylintrc  .travis.yml  Dockerfile  README.md  build.sh  pyproject.toml  requirements.txt  setup.cfg  setup.py
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  codeql-analysis.yml  publish-pypi.yml  release.yml
j2tmpl/: __init__.py  cli.py
kubernetes/init/: Dockerfile
tests/: conftest.py  test_directory.py  test_parser.py  test_render.py
tests/templates/: error.jinja  extensions.jinja  include.jinja  simple.jinja  single-line-error.jinja  undefined.jinja
tests/templates/filters/: base64.jinja  boolean.jinja  readfile.jinja
tests/templates/fragment-directory/rendered/: nobase.conf  test.conf  test2.conf
tests/templates/fragment-directory/rendered/fragment-subdirectory/: sub.conf  sub2.conf
tests/templates/fragment-directory/templates/: test.conf.jinja  test2.conf.jinja
tests/templates/fragment-directory/templates/fragment-subdirectory/: sub.conf.jinja  sub2.conf.jinja
tests/templates/fragment-directory/templates/nobase.conf.jinja.d/: nobase.conf.jinja
tests/templates/fragment-directory/templates/test.conf.jinja.d/: fragment.jinja  fragment2.conf.jinja
tests/templates/simple-directory/rendered/: test.conf
tests/templates/simple-directory/rendered/simple-subdirectory/: test.sub
tests/templates/simple-directory/templates/: test.conf.jinja
tests/templates/simple-directory/templates/simple-subdirectory/: test.sub.jinja
(+2 files in other folders)
